# llmgine

./: .aider.chat.history.md  .aider.input.history  .gitignore  README.md  message_bus.db  mini_editor_document.txt  pyproject.toml  sentence_contexts.json  setup.py  verify_success.py
.contextr/: .ignore  state.json
.cursor/rules/: instructions.mdc
botenv/: testfile.txt
engines/: anthea_engine copy.py  anthea_engine.py  fact_extractor_engine.py  fact_processing_engine.py  single_pass_engine.py  test.py  tool_chat_engine.py  tool_engine.py
examples/: basic_example.py  loop_workflow_example.py  workflow_example.py
llmgine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
playground/: workflow.py
programs/: playground.py
programs/cli/: cli.py
programs/engines/: engine_guide.md  single_pass_engine.py  tool_chat_engine.py  voice_processing_engine.py
programs/notion-framework/: README.md  pyproject.toml
programs/notion-framework/examples/: basic_usage.py
programs/notion-framework/src/notion_framework/: __init__.py  cli.py  cli_broken.py  framework.py
programs/notion-framework/src/notion_framework/client/: __init__.py  client.py  exceptions.py
programs/notion-framework/src/notion_framework/codegen/: __init__.py  database_generator.py  template_engine.py  tool_generator.py
programs/notion-framework/src/notion_framework/codegen/templates/: database.py.j2  tools.py.j2
programs/notion-framework/src/notion_framework/integration/: __init__.py  framework.py  tool_registry.py
programs/notion-framework/src/notion_framework/schema/: __init__.py  analyzer.py  mapper.py  validator.py
programs/notion-framework/src/notion_framework/types/: __init__.py  database.py  filters.py  page.py  properties.py  sorts.py
programs/notion-framework/tests/: __init__.py  conftest.py
prompts/: classification_prompt.md  decomposition_prompt.md  disambiguation_prompt.md  factextraction_prompt.md  selection_new.md  selection_prompt.md
src/api/: README.md  config.py  main.py
src/llmgine/: __init__.py  __main__.py  bootstrap.py  ui.py  (+4 more)
src/llmgine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bootstrap.py
tools/: notion.py
(+132 files in other folders)
