[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llmgine"
version = "0.1.0"
description = "A unified LLM engine to do anything you can imagine."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.20.3",
    "litellm>=1.60.8",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "ruff>=0.9.6",
    "textual>=2.1.0",
]

[tool.setuptools]
package-dir = {"llmgine" = "src/llmgine", "tests" = "tests"}

[tool.uv]
auto-install = true
